[package]
name = "draven"
version = "2.3.0"
edition = "2021"
description = "draven creates obsidian graph files from a rust project structs in real time"
repository = "https://github.com/AuracleTech/draven"
license = "MIT"
keywords = ["cli", "draven", "obsidian", "graph", "rust"]
categories = ["command-line-utilities"]

[dependencies]
notify = "6.1.1"
quote = "1.0.36"
syn = { version = "2.0.65", features = ["full"] }
