[package]
name = "draven"
version = "4.0.0"
edition = "2021"
description = "draven creates a visualization of a rust project's dependencies using jax"
repository = "https://github.com/AuracleTech/draven"
license = "MIT"
keywords = ["cli", "draven", "jax", "graph", "rust"]
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
notify = "6.1.1"
quote = "1.0.36"
syn = { version = "2.0.65", features = ["full", "extra-traits"] }
toml = "0.8.13"
